kubernetes/base/core-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  namespace: your-gcp-project-id
  annotations:
    cloud.google.com/backend-config: '{"default": "api-backend-config"}'
spec:
  selector:
    app: core-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
